STAGE-06 Selection is right